vertically alignment issues fixed hero image contrast issue fixed

--- a/app/assets/stylesheets/redesign/_about.css.scss
+++ b/app/assets/stylesheets/redesign/_about.css.scss
@@ -165,7 +165,7 @@
             font-weight: bold;
             font-family: $font-family-secondary;
             margin-bottom: 0.5rem;
-            padding: 33% 0 0;
+            padding: 37% 0 0;
           }
 
           .slick-date {
@@ -191,7 +191,7 @@
         padding: 0;
         margin: 0 auto 0;
         position: absolute;
-        z-index: 100;
+        z-index: 105;
         bottom: 15px;
 
         li {
@@ -350,9 +350,10 @@
 
       .office-image {
         width: 100%;
-        padding-bottom: 26%;
+        padding-top: 25.9%;
+        padding-bottom: 24.3%;
         margin: 0.75rem 0;
-        display: table;
+        position: relative;
         background-position: center center;
         background-size: cover;
         background-repeat: no-repeat;
@@ -367,20 +368,27 @@
           background-image: url('/assets/_about/new-york-full.jpg');
         }
 
-        .content-wrap {
-          width: 100%;
-          height: 100%;
-          display: table-cell;
-          vertical-align: middle;
-        }
+        // &:before {
+        //   width: 100%;
+        //   height: 2px;
+        //   display: block;
+        //   content: " ";
+        //   position: absolute;
+        //   top: 50%;
+        //   margin-top: -1px;
+        //   background-color: #fff;
+        // }
 
         p {
+          width: 100%;
+          height: 1em;
+          display: block;
           color: #fff;
           text-align: center;
           letter-spacing: 0.5rem;
+          font-size: 1.9rem;
           font-family: $font-family-secondary;
           font-weight: 900;
-          padding-top: 25%;
         }
       }
 
@@ -557,8 +565,8 @@
 
       }
 
-      &.our-offices .office-image {
-        height: 130px;
+      &.our-offices .office-image p{
+
       }
 
       &.modern-atelier .copy-wrap {
